[project]
name = "poetry-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima",email = "dima.mihalkevich.99@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)"
]

[tool.poetry]
packages = [{include = "poetry_fastapi", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.3,<10.0.0)"
]
dev = [
    "ruff (>=0.15.16,<0.16.0)"
]
