[project]
name = "poetry-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima",email = "dima.mihalkevich.99@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "poetry_fastapi", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.3,<10.0.0)"
]
dev = [
    "ruff (>=0.15.16,<0.16.0)"
]
